add stu's config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,13 +1,13 @@
 # Setup monitors
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=,preferred,auto,1
 
 # Dual monitor example on G15 Strix
 # eDP-1 is the built in monitor while DP-1 is external
 # Both monitors here are at 1440 and 165Hz
 # DP-1 is on the left and  eDP-1 is on the right
-#monitor=DP-1,2560x1440@165,0x0,1
-#monitor=eDP-1,2560x1440@165,2560x0,1
+monitor=DP-1,highres,0x0,1
+monitor=eDP-1,highres,0x1080,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -17,7 +17,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = waybar
-exec = swaybg -m fill -i ~/.config/hypr/hong-kong-night.jpg
+exec = swaybg -m fill -i ~/.config/hypr/clouds.png
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -33,7 +33,7 @@ input {
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = no
+        natural_scroll = yes
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -45,7 +45,7 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 2
-    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.active_border=rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
 
@@ -105,9 +105,9 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic mouse V1 {
-    sensitivity = -0.5
-}
+#device:epic mouse V1 {
+#    sensitivity = -0.5
+#}
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
@@ -117,14 +117,22 @@ device:epic mouse V1 {
 # rules below would make the specific app transparent
 windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
 windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
-# windowrulev2 = opacity 0.8 0.8,class:^(chromium)$
-# windowrulev2 = opacity 0.8 0.8,class:^(Code)$
+windowrulev2 = opacity 0.8 0.8,class:^(chromium)$
+windowrulev2 = opacity 0.7 0.7,class:^(code-oss)$
+windowrulev2 = opacity 0.7 0.7,class:^(org.telegram.desktop)$
+windowrulev2 = opacity 0.7 0.7,class:^(zoom)$
+#windowrulev2 = opacity 0.7 0.7,class:^(intellij-idea-ultimate-edition)$
+windowrulev2 = opacity 0.8 0.8,class:^(vlc)$
+windowrulev2 = opacity 0.8 0.8,class:^(jetbrains-idea)$
+windowrulev2 = opacity 0.8 0.8,class:^(Alacritty)$
+windowrulev2 = opacity 0.6 0.6,class:^(org.gnome.Solanum)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty  #open the terminal
+#bind = $mainMod, Q, exec, kitty  #open the terminal
+bind = $mainMod, Q, exec, alacritty #open alacritty
 bind = $mainMod SHIFT, X, killactive, # close the active window
 bind = $mainMod, L, exec, swaylock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
