--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,13 +1,16 @@
 include ./mocha.conf
 font_family      jetbrains mono nerd font
-font_size        15
+font_size        12
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 mouse_hide_wait  2.0
-cursor_shape     block
+cursor_shape     underline
 url_color        #0087bd
 url_style        dotted
 #Close the terminal without confirmation
 confirm_os_window_close 0
-background_opacity 0.95
+background_opacity 0.8
+
+# stu
+disable_gruvbox_automatic_color_adjustments yes
