--- a/kitty/mocha.conf
+++ b/kitty/mocha.conf
@@ -10,13 +10,13 @@
 
 # The basic colors
 foreground              #CDD6F4
-background              #1E1E2E
-selection_foreground    #1E1E2E
+background              #212a36
+selection_foreground    #212a36
 selection_background    #F5E0DC
 
 # Cursor colors
 cursor                  #F5E0DC
-cursor_text_color       #1E1E2E
+cursor_text_color       #212a36
 
 # URL underline color when hovering with mouse
 url_color               #F5E0DC
@@ -38,18 +38,18 @@ inactive_tab_background #181825
 tab_bar_background      #11111B
 
 # Colors for marks (marked text in the terminal)
-mark1_foreground #1E1E2E
+mark1_foreground #212a36
 mark1_background #B4BEFE
-mark2_foreground #1E1E2E
+mark2_foreground #212a36
 mark2_background #CBA6F7
-mark3_foreground #1E1E2E
+mark3_foreground #212a36
 mark3_background #74C7EC
 
 # The 16 terminal colors
 
 # black
-color0 #45475A
-color8 #585B70
+color0 #212a36
+color8 #212a36
 
 # red
 color1 #F38BA8
