--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -126,6 +126,7 @@ windowrulev2 = opacity 0.8 0.8,class:^(vlc)$
 windowrulev2 = opacity 0.8 0.8,class:^(jetbrains-idea)$
 windowrulev2 = opacity 0.8 0.8,class:^(Alacritty)$
 windowrulev2 = opacity 0.6 0.6,class:^(org.gnome.Solanum)$
+windowrulev2 = opacity 0.8 0.8,class:^(xdm-app)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
