--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,8 +6,9 @@ monitor=,preferred,auto,1
 # eDP-1 is the built in monitor while DP-1 is external
 # Both monitors here are at 1440 and 165Hz
 # DP-1 is on the left and  eDP-1 is on the right
-monitor=DP-1,highres,0x0,1
 monitor=eDP-1,highres,0x1080,1
+monitor=DP-1,highres,0x0,1
+monitor=HDMI-A-1,highres,0x0,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -133,8 +134,11 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 #bind = $mainMod, Q, exec, kitty  #open the terminal
-bind = $mainMod, Q, exec, alacritty #open alacritty
-bind = $mainMod SHIFT, X, killactive, # close the active window
+bind = $mainMod, Q, killactive, # close the active window
+bind = $mainMod, A, exec, alacritty #open alacritty
+bind = $mainMod, C, exec, code #open vscode
+bind = $mainMod SHIFT, C, exec, chromium #open chromium
+bind = $mainMod, I, exec, intellij-idea-ultimate-edition #open intellij idea ultimate edition
 bind = $mainMod, L, exec, swaylock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
