--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -119,7 +119,7 @@ gestures {
 windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
 windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 windowrulev2 = opacity 0.8 0.8,class:^(chromium)$
-windowrulev2 = opacity 0.7 0.7,class:^(code --enable-features=UseOzonePlatform --ozone-platform=wayland)$
+windowrulev2 = opacity 0.7 0.7,class:^(code-oss)$
 windowrulev2 = opacity 0.7 0.7,class:^(org.telegram.desktop)$
 windowrulev2 = opacity 0.7 0.7,class:^(zoom)$
 #windowrulev2 = opacity 0.7 0.7,class:^(intellij-idea-ultimate-edition)$
@@ -136,7 +136,7 @@ $mainMod = SUPER
 #bind = $mainMod, Q, exec, kitty  #open the terminal
 bind = $mainMod, Q, killactive, # close the active window
 bind = $mainMod, A, exec, alacritty #open alacritty
-bind = $mainMod, C, exec, code #open vscode
+bind = $mainMod, C, exec, code --enable-features=UseOzonePlatform --ozone-platform=wayland #open vscode
 bind = $mainMod SHIFT, C, exec, chromium #open chromium
 bind = $mainMod, I, exec, intellij-idea-ultimate-edition #open intellij idea ultimate edition
 bind = $mainMod, L, exec, swaylock # Lock the screen
